--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -25,6 +25,10 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: mywebsite
   deploy:
     needs: build
     runs-on: ubuntu-latest
