--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -26,9 +26,10 @@ jobs:
       - name: Build website
         run: npm run build
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: mywebsite
+          path: dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
