--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -34,5 +34,11 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: mywebsite
+      - name: list-files
+        run: ls -la
       - name: Deploy
         run: echo "Deploying..."
