added download files step and list recurssively them

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -39,6 +39,6 @@ jobs:
         with:
           name: mywebsite
       - name: list-files
-        run: ls -la
+        run: ls -R
       - name: Deploy
         run: echo "Deploying..."
