--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build website
         run: npm run build
       - name: Publish JS name
-        run: find dist/assests/*.js -type f -execdir echo '{}' ';'
+        run: find dist/assests/*.*.js -type f -execdir echo '{}' ';'
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
