--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -25,8 +25,8 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
-      - name: Publish JS name
-        run: find dist/assests/*.*.js -type f -execdir echo '{}' ';'
+#      - name: Publish JS name
+ #       run: find dist/assests/*.*.js -type f -execdir echo '{}' ';'
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -42,5 +42,7 @@ jobs:
           name: mywebsite
       - name: list-files
         run: ls -R
+      - name: Publish JS name
+        run: find dist/assests/*.*.js -type f -execdir echo '{}' ';'
       - name: Deploy
         run: echo "Deploying..."
