--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -43,6 +43,6 @@ jobs:
       - name: list-files
         run: ls -R
       - name: Publish JS name
-        run: find dist/assests/index*.js -type f -execdir echo '{}' ';'
+        run: find ./dist/assests/index*.js -type f -execdir echo '{}' ';'
       - name: Deploy
         run: echo "Deploying..."
