--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,6 +18,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      index-filename: ${{ steps.publish.outputs.index-filename }}
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -25,8 +27,8 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
-      - name: Publish JS name
-        run: find dist/assets/*.js -type f -execdir echo '{}' ';'
+      - name: publish
+        run: find dist/assets/*.js -type f -execdir echo 'index-filename={}' >> $GITHUB_OUTPUT ';'
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
