--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -27,8 +27,10 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
-      - name: publish
+      - name: getindexfilename
         run: find dist/assets/*.js -type f -execdir echo 'index-filename={}' >> $GITHUB_OUTPUT ';'
+      - name: print indexfilename
+        run: echo "Index filename is $GITHUB_OUTPUT"
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
